fix overflow

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -3,8 +3,7 @@
   flex-direction: row;
   height: 100vh;
   width: 100vw;
-  // Added to fix content overflow
-  // overflow: hidden;
+  overflow: hidden;
 
   .sidebar {
     width: var(--_sidebar-width);
@@ -13,11 +12,9 @@
     color: white;
     box-sizing: border-box;
     transition: width 100ms ease-in-out;
-    // Added to fix content overflow
-    // flex-shrink: 0;
+    flex-shrink: 0;
 
     &.isDragging {
-      // Disable transitions during drag for better performance
       transition: none;
     }
 
@@ -25,7 +22,6 @@
       padding: 0;
       overflow: hidden;
 
-      // Hide sidebar content when collapsed
       > *:not(.resizer) {
         opacity: 0;
         pointer-events: none;
@@ -61,10 +57,8 @@
 
   .content {
     flex: 1;
-    // Added to fix content overflow
-    // min-width: 0;
+    min-width: 0;
     box-sizing: border-box;
-    // Added to fix content overflow
-    // overflow: hidden;
+    overflow: hidden;
   }
 }
